v5.1.0/_sources/generated/pcdsdevices.ipm.IPIMBChannel.rst.txt
pcdsdevices.ipm.IPIMBChannel
============================

.. currentmodule:: pcdsdevices.ipm

.. autoclass:: IPIMBChannel

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - amplitude (FCpt)
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``{self.prefix}:CH{self.channel_index}``
          - 
          - hinted
          - 
    
        * - gain (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{self.prefix}:ChargeAmpRangeCH{self.channel_index}``
          - 
          - config
          - 
    
        * - base (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{self.prefix}:CH{self.channel_index}_BASE``
          - 
          - config
          - 
    
        * - scale (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{self.prefix}:CH{self.channel_index}_SCALE``
          - 
          - config
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    